--- a/skills/find_horse_with_highest_start_points_in_a_section.yaml
+++ b/skills/find_horse_with_highest_start_points_in_a_section.yaml
@@ -6,18 +6,16 @@ Example questions:
 ---
 workflow:
   - step: 1
-    type: python
     description: "Identify the section you are interested in. The data is for a single round, so you only need to specify the section number."
     required_fields:
       - section.number
   - step: 2
-    type: python
     description: "Once the section is identified, this code ranks the horses by their start points in descending order and identifies the horse with the highest score."
     required_fields:
       - data.starters.horse.section_number
       - data.starters.horse.start_points
       - data.starters.horse.horse_name
-    code: |
+    code example: |
       section_number = 1  # Example section number
       starters_in_section = [s for s in data['starters'] if s['horse']['section_number'] == section_number]
 
